# FileTransfer

./: .gitignore  CMakeLists.txt  README.md  arm-toolchain.cmake  build.bat  build.sh  build_arm.sh  build_qt5_arm.sh  build_windows.bat  requirements.txt
src/: fileutil.cpp  fileutil.h  main.cpp  mainwindow.cpp  mainwindow.h  protocol.h  transfer.cpp  transfer.h
